5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4162/executions/1758_1580.log
== TEST (2019-05-28 11:09:59) 
-- CODE:
from numpy import*
n=array(eval(input("insira as notas: ")))
na=array(eval(input("insira os nomes: ")))
i=0
f=0
while i!=size(n):
	if n==-1:
		f=f+1
print(f)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:10:13) 
-- CODE:
from numpy import*
n=array(eval(input("insira as notas: ")))
na=array(eval(input("insira os nomes: ")))
i=0
f=0
while i!=size(n):
	if n==-1:
		f=f+1
print(f)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:10:21) 
-- CODE:
from numpy import*
n=array(eval(input("insira as notas: ")))
na=array(eval(input("insira os nomes: ")))
i=0
f=0
while i!=size(n):
	if n==-1:
		f=f+1
print(f)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:11:21) 
-- CODE:
from numpy import*
n=array(eval(input("insira as notas: ")))
na=array(eval(input("insira os nomes: ")))
i=0
f=0
while i!=size(n):
	if n==-1:
		f=f+1
print(f)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:11:57) 
-- CODE:
from numpy import*
n=array(eval(input("insira as notas: ")))
na=array(eval(input("insira os nomes: ")))
i=0
f=0
while i!=size(n):
	if n==-1:
		f=f+1
print(f)



-- EXECUTION TIME:
0.430464
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 7, in <module>
    if n==-1:
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:12:03) 
-- CODE:
from numpy import*
n=array(eval(input("insira as notas: ")))
na=array(eval(input("insira os nomes: ")))
i=0
f=0
while i!=size(n):
	if n==-1:
		f=f+1
print(f)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:13:16) 
-- CODE:
from numpy import*
n=array(eval(input("insira as notas: ")))
na=array(eval(input("insira os nomes: ")))
i=0
f=0
while i!=size(n):
	if n==-1:
		f=f+1
print(f)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:13:21) 
-- CODE:
from numpy import*
n=array(eval(input("insira as notas: ")))

i=0
f=0
while i!=size(n):
	if n==-1:
		f=f+1
print(f)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:13:23) 
-- CODE:
from numpy import*
n=array(eval(input("insira as notas: ")))

i=0
f=0
while i!=size(n):
	if n==-1:
		f=f+1
print(f)



-- EXECUTION TIME:
0.339603
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 7, in <module>
    if n==-1:
ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:13:23) 
-- CODE:
from numpy import*
n=array(eval(input("insira as notas: ")))

i=0
f=0
while i!=size(n):
	if n==-1:
		f=f+1
print(f)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:14:14) 
-- CODE:
from numpy import*
n=array(eval(input("insira as notas: ")))

i=0
f=0
while i!=size(n):
	if n[i]==-1:
		f=f+1
	i=i+1
print(f)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:25:17) 
-- CODE:
from numpy import*
n=array(eval(input("insira as notas: ")))
na=array(eval(input("insira os nomes: ")))

i=0
f=0
a=0
r=0
s=0
while i!=size(n):
	if n[i]==-1:
		f=f+1
	i=i+1
	if n[i]>=6:
		a=a+1
	i=i+1
	elif n[i]<6 and n[1]!=-1:
		r=r+1
	i=i+1
	if n[i]!=-1:
		s=s+n[i]
	i=i+1
	if n[i]==max(n):
		m=i
	i=i+1
print(f)
print(a)
print(r)
print(round(s/(size(n)-f),2)
print(na[m])

-- ERROR:
File "XXXX", line 17
    elif n[i]<6 and n[1]!=-1:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:25:40) 
-- CODE:
from numpy import*
n=array(eval(input("insira as notas: ")))
na=array(eval(input("insira os nomes: ")))

i=0
f=0
a=0
r=0
s=0
while i!=size(n):
	if n[i]==-1:
		f=f+1
	i=i+1
	if n[i]>=6:
		a=a+1
	i=i+1
	if n[i]<6 and n[1]!=-1:
		r=r+1
	i=i+1
	if n[i]!=-1:
		s=s+n[i]
	i=i+1
	if n[i]==max(n):
		m=i
	i=i+1
print(f)
print(a)
print(r)
print(round(s/(size(n)-f),2)
print(na[m])

-- ERROR:
File "XXXX", line 30
    print(na[m])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:26:10) 
-- CODE:
from numpy import*
n=array(eval(input("insira as notas: ")))
na=array(eval(input("insira os nomes: ")))

i=0
f=0
a=0
r=0
s=0
while i!=size(n):
	if n[i]==-1:
		f=f+1
	i=i+1
	if n[i]>=6:
		a=a+1
	i=i+1
	if n[i]<6 and n[1]!=-1:
		r=r+1
	i=i+1
	if n[i]!=-1:
		s=s+n[i]
	i=i+1
	if n[i]==max(n):
		m=i
	i=i+1
print(f)
print(a)
print(r)
print(round(s/(size(n)-f),2)
print(na[m])

-- ERROR:
File "XXXX", line 30
    print(na[m])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:26:11) 
-- CODE:
from numpy import*
n=array(eval(input("insira as notas: ")))
na=array(eval(input("insira os nomes: ")))

i=0
f=0
a=0
r=0
s=0
while i!=size(n):
	if n[i]==-1:
		f=f+1
	i=i+1
	if n[i]>=6:
		a=a+1
	i=i+1
	if n[i]<6 and n[1]!=-1:
		r=r+1
	i=i+1
	if n[i]!=-1:
		s=s+n[i]
	i=i+1
	if n[i]==max(n):
		m=i
	i=i+1
print(f)
print(a)
print(r)
print(round(s/(size(n)-f),2)
print(na[m])

-- ERROR:
File "XXXX", line 30
    print(na[m])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:26:28) 
-- CODE:
from numpy import*
n=array(eval(input("insira as notas: ")))
na=array(eval(input("insira os nomes: ")))

i=0
f=0
a=0
r=0
s=0
while i!=size(n):
	if n[i]==-1:
		f=f+1
	i=i+1
	if n[i]>=6:
		a=a+1
	i=i+1
	if n[i]<6 and n[1]!=-1:
		r=r+1
	i=i+1
	if n[i]!=-1:
		s=s+n[i]
	i=i+1
	if n[i]==max(n):
		m=i
	i=i+1
print(f)
print(a)
print(r)
print(round(s/(size(n)-f),2)
print(na[m])

-- ERROR:
File "XXXX", line 30
    print(na[m])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:26:29) 
-- CODE:
from numpy import*
n=array(eval(input("insira as notas: ")))
na=array(eval(input("insira os nomes: ")))

i=0
f=0
a=0
r=0
s=0
while i!=size(n):
	if n[i]==-1:
		f=f+1
	i=i+1
	if n[i]>=6:
		a=a+1
	i=i+1
	if n[i]<6 and n[1]!=-1:
		r=r+1
	i=i+1
	if n[i]!=-1:
		s=s+n[i]
	i=i+1
	if n[i]==max(n):
		m=i
	i=i+1
print(f)
print(a)
print(r)
print(round(s/(size(n)-f),2)
print(na[m])

-- ERROR:
File "XXXX", line 30
    print(na[m])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:27:04) 
-- CODE:
from numpy import*
n=array(eval(input("insira as notas: ")))
na=array(eval(input("insira os nomes: ")))

i=0
f=0
a=0
r=0
s=0
while i!=size(n):
	if n[i]==-1:
		f=f+1
	i=i+1
	if n[i]>=6:
		a=a+1
	i=i+1
	if n[i]<6 and n[1]!=-1:
		r=r+1
	i=i+1
	if n[i]!=-1:
		s=s+n[i]
	i=i+1
	if n[i]==max(n):
		m=i
	i=i+1
print(f)
print(a)
print(r)
print(round(s/(size(n)-f),2)
print(na[m])

-- ERROR:
File "XXXX", line 30
    print(na[m])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:27:05) 
-- CODE:
from numpy import*
n=array(eval(input("insira as notas: ")))
na=array(eval(input("insira os nomes: ")))

i=0
f=0
a=0
r=0
s=0
while i!=size(n):
	if n[i]==-1:
		f=f+1
	i=i+1
	if n[i]>=6:
		a=a+1
	i=i+1
	if n[i]<6 and n[1]!=-1:
		r=r+1
	i=i+1
	if n[i]!=-1:
		s=s+n[i]
	i=i+1
	if n[i]==max(n):
		m=i
	i=i+1
print(f)
print(a)
print(r)
print(round(s/(size(n)-f),2)
print(na[m])

-- ERROR:
File "XXXX", line 30
    print(na[m])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:27:05) 
-- CODE:
from numpy import*
n=array(eval(input("insira as notas: ")))
na=array(eval(input("insira os nomes: ")))

i=0
f=0
a=0
r=0
s=0
while i!=size(n):
	if n[i]==-1:
		f=f+1
	i=i+1
	if n[i]>=6:
		a=a+1
	i=i+1
	if n[i]<6 and n[1]!=-1:
		r=r+1
	i=i+1
	if n[i]!=-1:
		s=s+n[i]
	i=i+1
	if n[i]==max(n):
		m=i
	i=i+1
print(f)
print(a)
print(r)
print(round(s/(size(n)-f),2)
print(na[m])

-- ERROR:
File "XXXX", line 30
    print(na[m])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:27:05) 
-- CODE:
from numpy import*
n=array(eval(input("insira as notas: ")))
na=array(eval(input("insira os nomes: ")))

i=0
f=0
a=0
r=0
s=0
while i!=size(n):
	if n[i]==-1:
		f=f+1
	i=i+1
	if n[i]>=6:
		a=a+1
	i=i+1
	if n[i]<6 and n[1]!=-1:
		r=r+1
	i=i+1
	if n[i]!=-1:
		s=s+n[i]
	i=i+1
	if n[i]==max(n):
		m=i
	i=i+1
print(f)
print(a)
print(r)
print(round(s/(size(n)-f),2)
print(na[m])

-- ERROR:
File "XXXX", line 30
    print(na[m])
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:27:26) 
-- CODE:
from numpy import*
n=array(eval(input("insira as notas: ")))
na=array(eval(input("insira os nomes: ")))

i=0
f=0
a=0
r=0
s=0
while i!=size(n):
	if n[i]==-1:
		f=f+1
	i=i+1
	if n[i]>=6:
		a=a+1
	i=i+1
	if n[i]<6 and n[1]!=-1:
		r=r+1
	i=i+1
	if n[i]!=-1:
		s=s+n[i]
	i=i+1
	if n[i]==max(n):
		m=i
	i=i+1
print(f)
print(a)
print(r)
print(round(s/(size(n)-f)),2)
print(na[m])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:33:29) 
-- CODE:
from numpy import*
n=array(eval(input("insira as notas: ")))
na=array(eval(input("insira os nomes: ")))

i=0
f=0
a=0
r=0
s=0
while i!=size(n):
	if n[i]==-1:
		f=f+1
	i=i+1
	if n[i]>=6:
		a=a+1
	i=i+1
	if n[i]<6 and n[1]!=-1:
		r=r+1
	i=i+1
	if n[i]!=-1:
		s=s+n[i]
	i=i+1
	if n[i]==max(n):
		m=i
	i=i+1
print(f)
print(a)
print(r)
print(round(s/(size(n)-f)),2)
print(na[m])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:33:31) 
-- CODE:
from numpy import*
n=array(eval(input("insira as notas: ")))
na=array(eval(input("insira os nomes: ")))

i=0
f=0
a=0
r=0
s=0
while i!=size(n):
	if n[i]==-1:
		f=f+1
	i=i+1
	if n[i]>=6:
		a=a+1
	i=i+1
	if n[i]<6 and n[1]!=-1:
		r=r+1
	i=i+1
	if n[i]!=-1:
		s=s+n[i]
	i=i+1
	if n[i]==max(n):
		m=i
	i=i+1
print(f)
print(a)
print(r)
print(round(s/(size(n)-f)),2)
print(na[m])

-- EXECUTION TIME:
0.312969
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 17, in <module>
    if n[i]<6 and n[1]!=-1:
IndexError: index 12 is out of bounds for axis 0 with size 12

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:33:32) 
-- CODE:
from numpy import*
n=array(eval(input("insira as notas: ")))
na=array(eval(input("insira os nomes: ")))

i=0
f=0
a=0
r=0
s=0
while i!=size(n):
	if n[i]==-1:
		f=f+1
	i=i+1
	if n[i]>=6:
		a=a+1
	i=i+1
	if n[i]<6 and n[1]!=-1:
		r=r+1
	i=i+1
	if n[i]!=-1:
		s=s+n[i]
	i=i+1
	if n[i]==max(n):
		m=i
	i=i+1
print(f)
print(a)
print(r)
print(round(s/(size(n)-f)),2)
print(na[m])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:37:55) 
-- CODE:
from numpy import*
n=array(eval(input("insira as notas: ")))
na=array(eval(input("insira os nomes: ")))

i=0
f=0
a=0
r=0
s=0
while i!=size(n):
	if n[i]==-1:
		f=f+1
	if n[i]>=6:
		a=a+1
	if n[i]<6 and n[1]!=-1:
		r=r+1
	if n[i]!=-1:
		s=s+n[i]
	if n[i]==max(n):
		m=i
	i=i+1
print(f)
print(a)
print(r)
print(round(s/(size(n)-f)),2)
print(na[m])

-- EXECUTION TIME:
0.472226
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
8
5.0 2
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
11
3.0 2
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.0 2
HELOISA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:37:58) 
-- CODE:
from numpy import*
n=array(eval(input("insira as notas: ")))
na=array(eval(input("insira os nomes: ")))

i=0
f=0
a=0
r=0
s=0
while i!=size(n):
	if n[i]==-1:
		f=f+1
	if n[i]>=6:
		a=a+1
	if n[i]<6 and n[1]!=-1:
		r=r+1
	if n[i]!=-1:
		s=s+n[i]
	if n[i]==max(n):
		m=i
	i=i+1
print(f)
print(a)
print(r)
print(round(s/(size(n)-f)),2)
print(na[m])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:38:52) 
-- CODE:
from numpy import*
n=array(eval(input("insira as notas: ")))
na=array(eval(input("insira os nomes: ")))

i=0
f=0
a=0
r=0
s=0
while i!=size(n):
	if n[i]==-1:
		f=f+1
	if n[i]>=6:
		a=a+1
	if n[i]<6 and n[1]!=-1:
		r=r+1
	if n[i]!=-1:
		s=s+n[i]
	if n[i]==max(n):
		m=i
	i=i+1
print(f)
print(a)
print(r)
print(round(s/(size(n)-f)),2)
print(na[m])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:39:50) 
-- CODE:
from numpy import*
n=array(eval(input("insira as notas: ")))
na=array(eval(input("insira os nomes: ")))

i=0
f=0
a=0
r=0
s=0
while i!=size(n):
	if n[i]==-1:
		f=f+1
	elif n[i]>=6:
		a=a+1
	elif n[i]<6 and n[1]!=-1:
		r=r+1
	if n[i]!=-1:
		s=s+n[i]
	if n[i]==max(n):
		m=i
	i=i+1
print(f)
print(a)
print(r)
print(round(s/(size(n)-f)),2)
print(na[m])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:41:48) 
-- CODE:
from numpy import*
n=array(eval(input("insira as notas: ")))
na=array(eval(input("insira os nomes: ")))

i=0
f=0
a=0
r=0
s=0
while i!=size(n):
	if n[i]==-1:
		f=f+1
	elif n[i]>=6:
		a=a+1
	elif n[i]<6 and n[1]!=-1:
		r=r+1
	if n[i]!=-1:
		s=s+n[i]
	if n[i]==max(n):
		m=i
	i=i+1
print(f)
print(a)
print(r)
print(round(s/(size(n)-f),2))
print(na[m])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:42:16) 
-- CODE:
from numpy import*
n=array(eval(input("insira as notas: ")))
na=array(eval(input("insira os nomes: ")))

i=0
f=0
a=0
r=0
s=0
while i!=size(n):
	if n[i]==-1:
		f=f+1
	elif n[i]>=6:
		a=a+1
	elif n[i]<6 and n[1]!=-1:
		r=r+1
	if n[i]!=-1:
		s=s+n[i]
	if n[i]==max(n):
		m=i
	i=i+1
print(f)
print(a)
print(r)
print(round(s/(size(n)-f),2))
print(na[m])
-- EXECUTION TIME:
0.408451
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
